# meson_test

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  COMMANDS_CHEATSHEET.md  README.md  get_coverage_percentages  meson.build  run_gcov.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
build_scripts/: get_coverage_percentages  run-clang-tidy  tidy.sh
src/: main.cpp  meson.build
subprojects/hello-greet/: hello-greet.cpp  hello-greet.hpp  meson.build
test/: meson.build
test/math/: math-test.cpp  meson.build
test/my-gtest/: meson.build  my-gtest.cpp
test/my-test/: meson.build  my-test.cpp
